objects/box__Folder_Meta__c/box__Folder_Meta__c.object-meta.xml
<CustomObject>
    <label>Folder Metadata</label>
    <nameField>
        <label>Folder Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folder Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>