objects/box__Folder_Meta__c/fields/box__Folder_Append__c.field-meta.xml
<CustomField>
    <fullName>box__Folder_Append__c</fullName>
    <label>Folder Append</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>