objects/box__Folder_Meta__c/fields/box__Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>box__Folder_Id__c</fullName>
    <label>Folder Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>