objects/box__Folder_Meta__c/fields/box__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>box__Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>