objects/box__Folder_Meta__c/fields/box__Folder_Share_Link__c.field-meta.xml
<CustomField>
    <fullName>box__Folder_Share_Link__c</fullName>
    <label>Folder Share Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>